--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -98,15 +98,15 @@
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/couchbase/1953249b-4880-4002-80da-598ef1efa6a1'>Couchbase - Lead Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/couchbase/1953249b-4880-4002-80da-598ef1efa6a1'>Couchbase - Lead Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -150,7 +150,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4493584002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4493584002'>Job Application for Site Reliability Engineer at Digital On Us</a></h5> 
 <p><span class="badge badge-light">Hyderabad</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -209,7 +209,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/stars-group/job/otr1afwP'>The Stars Group Careers - Site Reliability Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/stars-group/job/otr1afwP'>The Stars Group Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -261,7 +261,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theorem.applytojob.com/apply/bYQApJnq23/Experienced-Site-Reliability-Engineer'>Experienced Site Reliability Engineer - Theorem, LLC - Career Page</a></h5> 
+<h5><a href='https://theorem.applytojob.com/apply/bYQApJnq23/Experienced-Site-Reliability-Engineer'>Experienced Site Reliability Engineer - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... Experienced Site Reliability Engineer. Remote, Multiple Countries; Full Time; 
 Engineering; Experienced. Share. Theorem is a software consultancy that 
@@ -330,7 +330,7 @@ Linux experience, network knowledge, scripting abilities, information security a
 <p><span class="badge badge-light">Palo Alto, California</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://archilogic.join.com/jobs/433611-site-reliability-engineer'>Job @ Archilogic (Z?rich): Site Reliability Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://archilogic.join.com/jobs/433611-site-reliability-engineer'>Job @ Archilogic (Z?rich): Site Reliability Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -352,7 +352,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oMbuafwl&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nCgecMwz'>ServiceNow Careers - Site Reliability Engineer Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oMbuafwl&__jvst=Employee+Referral&__jvsd=stbvlgwf&__jvsc=Twitter&bid=nCgecMwz'>ServiceNow Careers - Site Reliability Engineer Intern</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
@@ -416,11 +416,11 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/2b67515f-4302-4e9a-b850-5a53d349f0d7'>Gojek - Site Reliability Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/gojek/2b67515f-4302-4e9a-b850-5a53d349f0d7'>Gojek - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Bengaluru  Bangalore Jakarta</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4479789002'>Job Application for Site Reliability Engineers  at Digital On Us</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitalonus/jobs/4479789002'>Job Application for Site Reliability Engineers  at Digital On Us</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
